Fixes and tweaks to image cropping functionality

--- a/Source/Zeus.Admin/Assets/Css/edit.css
+++ b/Source/Zeus.Admin/Assets/Css/edit.css
@@ -130,7 +130,7 @@ input[type="text"].date
 .description
 {
 	float: left;
-	margin-left: 165px;
+	margin: 5px 0 0 165px;
 	color: #808285;
 	font-size: 10px;
 }
